assets/scss/components/stencil/productView/_productView.scss
/* ... */
.productView-info-name,
.productView-info-value {
    float: left;

    @include breakpoint("small") {
        float: none;
    }
}

.productView-info-name {
    clear: both;
    margin-bottom: spacing("eighth");
    margin-right: spacing("quarter");

    @include breakpoint("small") {
        font-family: fontFamily("headingSans");
        font-size: fontSize("smallest");
        font-weight: fontWeight("normal");
    }
}

.productView-info-value {
    margin-bottom: spacing("quarter");

    @include breakpoint("small") {
        margin-bottom: spacing("base");
    }
}


// Details - Product options
// -----------------------------------------------------------------------------
//
// 1. Align the product options list item radios vertically.
// 2. Resetting font due to inline-block whitespace issue.
// 3. File upload button does not properly display in IE if font-size is 0
//
// -----------------------------------------------------------------------------

.productView-options {
    @include clearfix;
    margin-bottom: spacing("single");
    text-align: center;

    @include breakpoint("small") {
        text-align: left;
    }

    .form-input[type="number"] {
        @include breakpoint("small") {
            width: grid-calc(2, $total-columns);
        }
    }

    .form {
        display: inline;
    }

    input[type="file"] {
        font-size: fontSize("smallest"); // 3
    }

    .form-field {
        font-size: 0; // 2
        margin-bottom: 2rem;

        // scss-lint:disable SelectorDepth, NestingDepth
        > .form-checkbox + .form-label,
        > .form-radio + .form-label {
            display: inline-block;
            margin-left: spacing("single");
            width: auto;

            @include breakpoint("small") {
                margin-left: 0;
                width: 100%;
            }
        }

        > .form-label:nth-of-type(2) {
            margin-left: 0;
        }
    }

    [data-product-option-change] {
        & > .form-field {
            display: none;
        }

        .form-field[data-product-attribute="set-rectangle"] {
            display: block;
            text-align: left;
            margin-bottom: stencilNumber("padding-small");

            .form-label {
                text-align: left;
                font-weight: fontWeight("bold");
                margin-top: stencilNumber("padding-normal");
                margin-bottom: stencilNumber("padding-small") * .5;
            }
            input[type="radio"] + label {
                margin-left: 0rem;
                margin-right: 0.5rem;
                margin-bottom: 0.25rem;
            }
            .form-option span {
                display: inline-flex;
                align-items: center;
                justify-content: center;
                padding: 4px 8px 4px;
                min-width: unset;
                font-weight: fontWeight("bold");
            }
            .form-radio:checked + .form-option {
                background: stencilColor('navUser-color');
                color: stencilColor('color-white');
            }
        }
        
        .form-field[data-product-attribute="swatch"] {
            display: block;
            text-align: left;
            margin-bottom: stencilNumber("padding-small");

            .form-label--alternate {
                display: none;
            }
            .form-option-swatch {
                margin-left: 0;

                .form-option-expandeds {
                    display: inline-block;
                    font-size: 10px;
                    position: absolute;
                    top: -21px;
                    left: 50%;
                    -webkit-transform: translate(-50%,0);
                    transform: translate(-50%,0);
                    transition: all .3s linear;
                    opacity: 0;
                    width: max-content;
                    font-weight: fontWeight("bold");
                    border-radius: 3px;
                    text-transform: capitalize;
                    border: 1px solid lightgray;
                    padding: 0px 4px;
                }

                &:hover {
                    .form-option-expandeds {
                        opacity: 1;
                        transition: all .3s linear;
                    }
                }
            }
            
        }
    }

    .form-action {

        @include breakpoint("small") {
            float: left;
            padding: 0 remCalc(10);
            width: 50%;
        }

        @include breakpoint("medium") {
            float: none;
            padding: 0;
            width: 100%;
        }

        @include breakpoint("large") {
            display: inline-block;
            margin-top: 1rem;
            width: 100%;
        }

        // scss-lint:disable SelectorDepth, NestingDepth
        .button {
            width: 100%;
            font-size: $fontSize-base;
            background-color: stencilColor("navUser-color");
            color: stencilColor("color-white");
            border: remCalc(2) solid stencilColor("navUser-color");
            font-weight: fontWeight("bold");
            letter-spacing: normal;
            text-transform: uppercase;
            padding: stencilNumber("padding-normal");
            margin: stencilNumber("padding-normal") 0;
            box-shadow: 0 remCalc(2) remCalc(5) 0 rgba(0,0,0,.16);

            @include breakpoint("large") {
                margin-right: spacing("half");
            }
        }
    }
}


// Product list (with images)
// -----------------------------------------------------------------------------

.productOptions-list {
    border: $productOptions-list-border;
    list-style: none;
    margin: 0;
}
/* ... */

